--- a/src/app/features/dashboard/header/header.component.html
+++ b/src/app/features/dashboard/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col-reverse justify-between gap-6 md:flex-row md:items-center">
+<div class="flex flex-col-reverse justify-between gap-6 ml-2 md:flex-row md:items-center">
     <div class="capitalize">
       <nav aria-label="breadcrumb" class="w-max">
         <ol class="flex flex-wrap items-center w-full bg-opacity-60 rounded-md bg-transparent p-0 transition-all">
