--- a/src/app/features/dashboard/sidebar/sidebar.component.html
+++ b/src/app/features/dashboard/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
         <li>
           <a routerLink="/admin/main" >
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-              routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+              routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
               <fa-icon [icon]="faTachometerAlt" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">dashboard</p>
             </button>
@@ -19,7 +19,7 @@
         <li>
           <a routerLink="/admin/clientes">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button" 
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faUsers" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Clientes</p>
             </button>
@@ -28,7 +28,7 @@
         <li>
           <a routerLink="/admin/ordenes">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faClipboardList" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Ordenes</p>
             </button>
@@ -37,7 +37,7 @@
         <li>
           <a routerLink="/admin/trabajadores">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faUserTie" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Trabajadores</p>
             </button>
@@ -46,7 +46,7 @@
         <li>
           <a routerLink="/admin/cargos">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faBriefcase" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Cargos</p>
             </button>
@@ -55,7 +55,7 @@
         <li>
           <a routerLink="/admin/usuarios">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faUser" class="icon-size"></fa-icon>
 
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Usuarios</p>
@@ -65,7 +65,7 @@
         <li>
           <a routerLink="/admin/reportes">
             <button class="middle none font-sans font-bold center transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-white hover:bg-white/10 active:bg-white/30 w-full flex items-center gap-4 px-2 capitalize" type="button"
-            routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-[0.85]">
+            routerLinkActive="bg-gradient-to-tr from-sky-600 to-sky-400 shadow-md shadow-sky-500/20 hover:shadow-lg hover:shadow-sky-500/40 active:opacity-[0.85]">
             <fa-icon [icon]="faChartBar" class="icon-size"></fa-icon>
               <p class="hidden xl:block antialiased font-sans text-base leading-relaxed text-inherit font-medium capitalize">Reportes</p>
             </button>
