--- a/src/app/features/dashboard/layout/layout.component.html
+++ b/src/app/features/dashboard/layout/layout.component.html
@@ -1,5 +1,5 @@
 <!-- component -->
-<div class="min-h-screen bg-gray-50/50">
+<div class="min-h-screen bg-white">
     <app-sidebar></app-sidebar>
     <div class="p-4 ml-20 xl:ml-80">
       <nav class="block w-full max-w-full bg-transparent text-white shadow-none rounded-xl transition-all px-0 py-1">
