--- a/src/app/features/clients/components/add-client/add-client.component.html
+++ b/src/app/features/clients/components/add-client/add-client.component.html
@@ -1,1 +1,133 @@
-<p>add-client works!</p>
+<div class="flex h-[80vh] justify-center font-sans">
+    <div class="container rounded-xl my-auto max-w-2xl p-6 m-2 shadow-md">
+      <!-- header -->
+      <div class="my-6 text-center">
+        <h1 class="text-3xl font-semibold text-black">Agregar Nuevo Cliente</h1>
+      </div>
+  
+      <!-- Formulario -->
+      <form (ngSubmit)="agregarCliente()" #clienteForm="ngForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div class="mb-2">
+          <label for="dni" class="block text-sm font-medium text-gray-700">DNI</label>
+          <input
+            type="text"
+            id="dni"
+            name="dni"
+            [(ngModel)]="cliente.dni"
+            required #dni="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="dni.valid || dni.pristine">
+            <p>El DNI es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre</label>
+          <input
+            type="text"
+            id="nombre"
+            name="nombre"
+            [(ngModel)]="cliente.nombre"
+            required #nombre="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="nombre.valid || nombre.pristine">
+            <p>El nombre es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="apellidoPaterno" class="block text-sm font-medium text-gray-700">Apellido Paterno</label>
+          <input
+            type="text"
+            id="apellidoPaterno"
+            name="apellidoPaterno"
+            [(ngModel)]="cliente.apellidoPaterno"
+            required #apellidoPaterno="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="apellidoPaterno.valid || apellidoPaterno.pristine">
+            <p>El apellido paterno es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="apellidoMaterno" class="block text-sm font-medium text-gray-700">Apellido Materno</label>
+          <input
+            type="text"
+            id="apellidoMaterno"
+            name="apellidoMaterno"
+            [(ngModel)]="cliente.apellidoMaterno"
+            required #apellidoMaterno="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="apellidoMaterno.valid || apellidoMaterno.pristine">
+            <p>El apellido materno es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="direccion" class="block text-sm font-medium text-gray-700">Dirección</label>
+          <input
+            type="text"
+            id="direccion"
+            name="direccion"
+            [(ngModel)]="cliente.direccion"
+            required #direccion="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="direccion.valid || direccion.pristine">
+            <p>La dirección es obligatoria.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="telefono" class="block text-sm font-medium text-gray-700">Teléfono</label>
+          <input
+            type="text"
+            id="telefono"
+            name="telefono"
+            [(ngModel)]="cliente.telefono"
+            required #telefono="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="telefono.valid || telefono.pristine">
+            <p>El teléfono es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="mb-2">
+          <label for="correo" class="block text-sm font-medium text-gray-700">Correo</label>
+          <input
+            type="email"
+            id="correo"
+            name="correo"
+            [(ngModel)]="cliente.correo"
+            required #correo="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+          />
+          <!-- Mensaje de error -->
+          <div class="text-red-500 text-sm" [hidden]="correo.valid || correo.pristine">
+            <p>El correo es obligatorio.</p>
+          </div>
+        </div>
+  
+        <div class="flex justify-center">
+          <button
+            type="submit"
+            class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded"
+          >
+            Agregar Cliente
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+  
