--- a/src/app/features/clients/components/client-list/client-list.component.html
+++ b/src/app/features/clients/components/client-list/client-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-[80vh] justify-center font-sans">
-    <div class="container rounded-xl my-auto max-w-2xl p-1 m-2 shadow-md">
+    <div class="container rounded-xl my-auto max-w-3xl p-1 m-2 shadow-md border border-sky-300">
       <!-- header -->
       <div class="my-6 text-center">
         <h1 class="text-3xl font-semibold text-black">Listado de Clientes</h1>
@@ -10,7 +10,7 @@
         <div class="flex justify-start">
           <a routerLink="/admin/clientes/nuevo" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded">Nuevo Cliente</a>
         </div>
-        <table class="min-w-full text-black rounded-lg divide-y divide-sky-600">
+        <table class="min-w-full text-black rounded-lg divide-y divide-sky-300">
           <thead>
             <tr>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Nombre Completo</th>
@@ -19,13 +19,16 @@
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Acción</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class="divide-y divide-sky-300">
             <tr *ngFor="let cliente of clients">
               <td class="text-left py-3 px-4">{{ cliente.nombre }} {{ cliente.apellidoPaterno }} {{ cliente.apellidoMaterno }}</td>
               <td class="text-left py-3 px-4">{{ cliente.correo }}</td>
               <td class="text-left py-3 px-4">{{ cliente.telefono }}</td>
               <td class="text-left py-3 px-4">
-                <a [routerLink]="['/clientes', cliente.idCliente]" class="text-blue-500 hover:text-blue-800">Editar</a>
+                <a [routerLink]="['/admin/clientes/editar', cliente.idCliente]" class="text-blue-500 hover:text-blue-800">Editar</a>
+              </td>
+              <td class="text-left py-3 px-4">
+                <button (click)="eliminarCliente(cliente.idCliente)" class="ml-2 text-red-500 hover:text-red-800">Eliminar</button>
               </td>
             </tr>
           </tbody>
