--- a/src/app/features/positions/components/positions-list/positions-list.component.html
+++ b/src/app/features/positions/components/positions-list/positions-list.component.html
@@ -1,1 +1,32 @@
-<p>positions-list works!</p>
+<div class="flex h-[80vh] justify-center font-sans">
+    <div class="container rounded-xl my-auto max-w-2xl p-1 m-2 shadow-md border border-sky-300">
+      <!-- Header -->
+      <div class="my-6 text-center">
+        <h1 class="text-3xl font-semibold text-black">Listado de Cargos</h1>
+      </div>
+  
+      <!-- Table -->
+      <div class="m-2 overflow-x-auto">
+        <div class="flex justify-start">
+          <a routerLink="/admin/cargos/nuevo" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded">Nuevo Cargo</a>
+        </div>
+        <table class="min-w-full text-black rounded-lg divide-y divide-sky-300">
+          <thead>
+            <tr>
+              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Nombre del Cargo</th>
+              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Acción</th>
+            </tr>
+          </thead>
+          <tbody class="divide-y divide-sky-300">
+            <tr *ngFor="let cargo of positions">
+              <td class="text-left py-3 px-4">{{ cargo.nombre }}</td>
+              <td class="text-left py-3 px-4">
+                <a [routerLink]="['/admin/cargos/editar', cargo.id]" class="text-blue-500 hover:text-blue-800">Editar</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  
