--- a/src/app/features/users/components/user-list/user-list.component.html
+++ b/src/app/features/users/components/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-[80vh] justify-center font-sans ">
-    <div class="container rounded-xl my-auto max-w-2xl p-1 m-2 shadow-md">
+    <div class="container rounded-xl my-auto max-w-2xl p-1 m-2 shadow-md border border-sky-300">
       <!-- header -->
       <div class="my-6 text-center">
         <h1 class="text-3xl font-semibold text-black">Listado de Usuarios</h1>
@@ -11,7 +11,7 @@
         <div class="flex justify-start">
           <a routerLink="/admin/usuarios/nuevo" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded">Nuevo Usuario</a>
         </div>
-        <table class=" min-w-full  text-black rounded-lg divide-y divide-sky-600 ">
+        <table class=" min-w-full  text-black rounded-lg divide-y divide-sky-300 ">
           <thead>
             <tr>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Nombre</th>
@@ -20,7 +20,7 @@
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Acción</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class=" divide-y divide-sky-300">
             <tr *ngFor="let user of users">
               <td class="text-left py-3 px-4">{{ user.nombre }}</td>
               <td class="text-left py-3 px-4">
@@ -34,7 +34,7 @@
               </td>
               <td class="text-left py-3 px-4">{{ user.createdAt| date: 'shortDate' }}</td>
               <td class="text-left py-3 px-4">
-                <a [routerLink]="['/users', user.usuarioId]" class="text-blue-500 hover:text-blue-800">Editar</a>
+                <a [routerLink]="['/admin/usuarios/editar', user.usuarioId]" class="text-blue-500 hover:text-blue-800">Editar</a>
             </tr>
           </tbody>
         </table>
