--- a/src/app/features/workers/components/add-worker/add-worker.component.html
+++ b/src/app/features/workers/components/add-worker/add-worker.component.html
@@ -1,1 +1,192 @@
-<p>add-worker works!</p>
+<div class="flex h-[80vh] justify-center font-sans"> 
+    <div class="container rounded-xl my-auto max-w-2xl p-6 m-2 shadow-md border border-sky-300">
+      <!-- header -->
+      <div class="my-6 text-center">
+        <h1 class="text-3xl font-semibold text-black">Agregar Nuevo Trabajador</h1>
+      </div>
+  
+      <!-- Formulario -->
+      <form (ngSubmit)="agregarTrabajador()" #trabajadorForm="ngForm">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+  
+          <!-- DNI -->
+          <div class="mb-2">
+            <label for="dni" class="block text-sm font-medium text-gray-700">DNI</label>
+            <input
+              type="text"
+              id="dni"
+              name="dni"
+              [(ngModel)]="worker.dni"
+              required #dni="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <!-- Mensaje de error -->
+            <div class="text-red-500 text-sm" [hidden]="dni.valid || dni.pristine">
+              <p>El DNI es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Nombre -->
+          <div class="mb-2">
+            <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre</label>
+            <input
+              type="text"
+              id="nombre"
+              name="nombre"
+              [(ngModel)]="worker.nombre"
+              required #nombre="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="nombre.valid || nombre.pristine">
+              <p>El nombre es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Apellido Paterno -->
+          <div class="mb-2">
+            <label for="apellidoPaterno" class="block text-sm font-medium text-gray-700">Apellido Paterno</label>
+            <input
+              type="text"
+              id="apellidoPaterno"
+              name="apellidoPaterno"
+              [(ngModel)]="worker.apellidoPaterno"
+              required #apellidoPaterno="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="apellidoPaterno.valid || apellidoPaterno.pristine">
+              <p>El apellido paterno es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Apellido Materno -->
+          <div class="mb-2">
+            <label for="apellidoMaterno" class="block text-sm font-medium text-gray-700">Apellido Materno</label>
+            <input
+              type="text"
+              id="apellidoMaterno"
+              name="apellidoMaterno"
+              [(ngModel)]="worker.apellidoMaterno"
+              required #apellidoMaterno="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="apellidoMaterno.valid || apellidoMaterno.pristine">
+              <p>El apellido materno es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Sexo -->
+          <div class="mb-2">
+            <label for="sexo" class="block text-sm font-medium text-gray-700">Sexo</label>
+            <select
+              id="sexo"
+              name="sexo"
+              [(ngModel)]="worker.sexo"
+              required #sexo="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            >
+              <option value="" disabled selected>Selecciona el sexo</option>
+              <option value="m">Masculino</option>
+              <option value="f">Femenino</option>
+            </select>
+            <div class="text-red-500 text-sm" [hidden]="sexo.valid || sexo.pristine">
+              <p>El sexo es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Fecha de Nacimiento -->
+          <div class="mb-2">
+            <label for="fechaNacimiento" class="block text-sm font-medium text-gray-700">Fecha de Nacimiento</label>
+            <input
+              type="date"
+              id="fechaNacimiento"
+              name="fechaNacimiento"
+              [(ngModel)]="worker.fechaNacimiento"
+              required #fechaNacimiento="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="fechaNacimiento.valid || fechaNacimiento.pristine">
+              <p>La fecha de nacimiento es obligatoria.</p>
+            </div>
+          </div>
+  
+          <!-- Teléfono -->
+          <div class="mb-2">
+            <label for="telefono" class="block text-sm font-medium text-gray-700">Teléfono</label>
+            <input
+              type="text"
+              id="telefono"
+              name="telefono"
+              [(ngModel)]="worker.telefono"
+              required #telefono="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="telefono.valid || telefono.pristine">
+              <p>El teléfono es obligatorio.</p>
+            </div>
+          </div>
+  
+          <!-- Dirección -->
+          <div class="mb-2">
+            <label for="direccion" class="block text-sm font-medium text-gray-700">Dirección</label>
+            <input
+              type="text"
+              id="direccion"
+              name="direccion"
+              [(ngModel)]="worker.direccion"
+              required #direccion="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="direccion.valid || direccion.pristine">
+              <p>La dirección es obligatoria.</p>
+            </div>
+          </div>
+  
+          <!-- Correo -->
+          <div class="mb-2">
+            <label for="correo" class="block text-sm font-medium text-gray-700">Correo</label>
+            <input
+              type="email"
+              id="correo"
+              name="correo"
+              [(ngModel)]="worker.correo"
+              required #correo="ngModel"
+              class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none"
+            />
+            <div class="text-red-500 text-sm" [hidden]="correo.valid || correo.pristine || correo.errors?.['email']">
+              <p>El correo es obligatorio.</p>
+            </div>
+            <!-- Mensaje de error para formato de correo inválido -->
+            <div class="text-red-500 text-sm" *ngIf="correo.errors?.['email'] && !correo.pristine">
+                <p>El formato del correo no es válido.</p>
+            </div>
+          </div>
+  
+          <!-- Cargo -->
+          <div class="mb-2">
+            <label for="cargo" class="block text-sm font-medium text-gray-700">Cargo</label>
+            <select id="position" [(ngModel)]="worker.cargo.id" name="position" required #cargo="ngModel"
+            class="mt-1 block w-full px-3 py-2 border border-sky-500 rounded-md shadow-sm focus:outline-none">
+                <option *ngFor="let pos of positions" [value]="pos.id">{{ pos.nombre }}</option>
+              </select>
+            <div class="text-red-500 text-sm" [hidden]="cargo.valid|| cargo.pristine">
+              <p>El cargo es obligatorio.</p>
+            </div>
+          </div>
+  
+        </div>
+         <!-- Mensaje de error -->
+         <div *ngIf="errorMessage" class="mb-4 text-red-500 text-sm">
+            {{ errorMessage }}
+          </div>
+        <div class="flex justify-center mt-4">
+          <button
+            type="submit"
+            class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded"
+          >
+            Agregar Trabajador
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+  
