--- a/src/app/features/workers/components/workers-list/workers-list.component.html
+++ b/src/app/features/workers/components/workers-list/workers-list.component.html
@@ -1,2 +1,46 @@
+<div class="flex h-[80vh] justify-center font-sans ">
+  <div class="container rounded-xl my-auto max-w-3xl p-1 m-2 shadow-md border border-sky-300">
+    <!-- header -->
+    <div class="my-6 text-center">
+      <h1 class="text-3xl font-semibold text-black">Listado de Trabajadores</h1>
+    </div>
 
-  <p>workers work  </p>
+    <!-- Table -->
+    <div class="m-2 overflow-x-auto">
+      <div class="flex justify-start">
+        <a routerLink="/admin/trabajadores/nuevo" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded">
+          Nuevo Trabajador
+        </a>
+      </div>
+      <table class="min-w-full text-black rounded-lg divide-y divide-sky-300">
+        <thead>
+          <tr>
+            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Nombre Completo</th>
+            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Teléfono</th>
+            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Correo</th>
+            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Acción</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-sky-300">
+          <tr *ngFor="let trabajador of workers">
+            <!-- Nombre Completo -->
+            <td class="text-left py-3 px-4">
+              {{ trabajador.nombre }} {{ trabajador.apellidoPaterno }} {{ trabajador.apellidoMaterno }}
+            </td>
+            <!-- Teléfono -->
+            <td class="text-left py-3 px-4">{{ trabajador.telefono }}</td>
+            <!-- Correo -->
+            <td class="text-left py-3 px-4">{{ trabajador.correo }}</td>
+            <!-- Acciones -->
+            <td class="text-left py-3 px-4">
+              <a [routerLink]="['/admin/trabajadores/editar', trabajador.idTrabajador]" class="text-blue-500 hover:text-blue-800">Editar</a>
+            </td>
+            <td class="text-left py-3 px-4">
+              <button (click)="eliminarTrabajador(trabajador.idTrabajador)" class="ml-2 text-red-500 hover:text-red-800">Eliminar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
