--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+@import "@ng-select/ng-select/themes/default.theme.css";
+
+::ng-deep ng-select {
+    border: none !important;
+    box-shadow: none !important;
+  }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+
 
