--- a/src/app/features/login/components/login/login.component.html
+++ b/src/app/features/login/components/login/login.component.html
@@ -60,6 +60,7 @@
              >
               Iniciar sesión
             </button>
+            <p class="mb-1 block text-sm text-gray-400">Demo: admin - 123</p>
            
             
           </div>
